[project]
name = "wan-gateway"
version = "1.0.0"
description = "A Gradio-based text-to-video generation application using Alibaba Bailian API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "WAN Gateway Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.43.1",
    "requests>=2.28.0", 
    "python-dotenv>=1.0.0",
    "dashscope>=1.14.0",
]



[project.urls]
Homepage = "https://github.com/PCcoding666/WAN_GATEWAY"
Repository = "https://github.com/PCcoding666/WAN_GATEWAY.git"
Issues = "https://github.com/PCcoding666/WAN_GATEWAY/issues"

[project.scripts]
wan-gateway = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

